test/files/neg/macro-exception/Test_2.scala
// filter: java.base|JavaReflectionRuntimes|macroExpandWithRuntime|Predef
object Test extends App {
  Macros.exception
}
